--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,13 @@
 .env.test.local
 .env.production.local
 
+now.json
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
