--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon node index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "now -e ctf_space_id=@ctf_space_id -e ctf_cda_token=@ctf_cda_token -e wgwdv_secret=@wgwdv_secret"
   },
   "repository": {
     "type": "git",
@@ -20,11 +21,12 @@
   ],
   "author": "Joran Quinten",
   "license": "MIT",
-  "homepage": "https://bitbucket.org/joranquinten/wgwdv-voice-webhook#readme",
+  "homepage": "https://github.com/joranquinten/wgwdv-voice#readme",
   "dependencies": {
     "contentful": "^7.0.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "helmet": "^3.15.0",
     "node-fetch": "^2.3.0"
   },
   "devDependencies": {
