--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "node-cache": "^4.2.0",
     "node-fetch": "^2.3.0"
   },
   "devDependencies": {
