--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/joranquinten/wgwdv-voice#readme",
   "dependencies": {
     "contentful": "^7.0.5",
+    "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
