--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon node index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "now -e ctf_space_id=@ctf_space_id -e ctf_cda_token=@ctf_cda_token -e wgwdv_secret=@wgwdv_secret"
+    "deploy": "NODE_ENV=production now -e ctf_space_id=@ctf_space_id -e ctf_cda_token=@ctf_cda_token -e wgwdv_secret=@wgwdv_secret"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "node-cache": "^4.2.0",
     "node-fetch": "^2.3.0"
   },
   "devDependencies": {
