--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon node index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "NODE_ENV=production now -e ctf_space_id=@ctf_space_id -e ctf_cda_token=@ctf_cda_token -e wgwdv_secret=@wgwdv_secret"
+    "deploy": "NODE_ENV=production now -e ctf_space_id=@ctf_space_id -e ctf_cda_token=@ctf_cda_token -e wgwdv_secret=@wgwdv_secret -e darksky_secret=@darksky_secret"
   },
   "repository": {
     "type": "git",
